--- a/conversion-coordenadas.ipynb
+++ b/conversion-coordenadas.ipynb
@@ -8,21 +8,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
    "source": [
-    "a = 2\n",
-    "print(a)"
+    "###### instalando modulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import pip\n",
+    "#!pip install astropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import astropy.coordinates as coord\n",
+    "import astropy.units as u"
    ]
   }
  ],
