--- a/conversion-coordenadas.ipynb
+++ b/conversion-coordenadas.ipynb
@@ -33,6 +33,22 @@
     "import astropy.coordinates as coord\n",
     "import astropy.units as u"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### definido inserção de conversção de coordenadas galactocêntricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coord.galactocentric_frame_defaults.set('latest')"
+   ]
   }
  ],
  "metadata": {
