--- a/conversion-coordenadas.ipynb
+++ b/conversion-coordenadas.ipynb
@@ -43,11 +43,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ScienceState galactocentric_frame_defaults: {'galcen_coord': <ICRS Coordinate: (ra, dec) in deg...>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coord.galactocentric_frame_defaults.set('latest')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### definindo, as coordenadas e a velocidade radial baricêntrica da galaxia M87, obtidas de Simbad :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coord.galactocentric_frame_defaults.set('latest')"
+    "coordenadasM87 = coord.SkyCoord(ra = 49.42338414 * u.deg, dec = 28.0436859 *u.deg,\n",
+    "radial_velocity = -16.1*u.km/u.s,frame = 'icrs')"
    ]
   }
  ],
