convertendo linha de coordenação

--- a/conversion-coordenadas.ipynb
+++ b/conversion-coordenadas.ipynb
@@ -77,6 +77,40 @@
     "coordenadasM87 = coord.SkyCoord(ra = 49.42338414 * u.deg, dec = 28.0436859 *u.deg,\n",
     "radial_velocity = -16.1*u.km/u.s,frame = 'icrs')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Em seguida, precisamos decidir sobre a velocidade do Sol no referencial GSR assumido. Usaremos o mesmo vetor de velocidade usado no Galactocentricquadro e o converteremos em um CartesianRepresentationobjeto usando o .to_cartesian()método do CartesianDifferentialobjeto galcen_v_sun:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sun = coord.Galactocentric().galcen_v_sun.to_cartesian()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ####  galáctico assumido a partir da posição do céu no referencial ICRS acima. Usaremos este vetor unitário para projetar a velocidade solar na linha de visão:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gal = coordenadasM87.transform_to(coord.Galactic)\n",
+    "cart_data = gal.data.to_cartesian()\n",
+    "unit_vector = cart_data / cart_data.norm()"
+   ]
   }
  ],
  "metadata": {
