Inserindo a projeção da velocidade solar á velocidade radial para obter uma velocidade radial GSR

--- a/conversion-coordenadas.ipynb
+++ b/conversion-coordenadas.ipynb
@@ -111,6 +111,47 @@
     "cart_data = gal.data.to_cartesian()\n",
     "unit_vector = cart_data / cart_data.norm()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Agora projetamos a velocidade solar usando este vetor unitario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "velocidade_sun = v_sun.dot(unit_vector)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Inserindo a projeção da velocidade solar á velocidade radial para obter uma velocidade radial GSR  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52.448856873415004 km / s\n"
+     ]
+    }
+   ],
+   "source": [
+    "rv_gsr = coordenadasM87.radial_velocity + velocidade_sun\n",
+    "print(rv_gsr)"
+   ]
   }
  ],
  "metadata": {
